Left Side sliding panel is completed

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="slide">
-        <h1>Satyam Shukla</h1>
-        <h2>DESIGNER | DEVELOPER | PHOTOGRAPHER  | <br> CINEMATOGRAPHER | EDITOR | CODER</h3>
+        <!-- <h1>Satyam Shukla</h1>
+        <h2>DESIGNER | DEVELOPER | PHOTOGRAPHER  | <br> CINEMATOGRAPHER | EDITOR | CODER</h3> -->
         <h3>Hover here <span class="a">to know about me</span> <span class="b">to close</span></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae numquam dolore at nisi, earum voluptate distinctio facilis repudiandae ab voluptatum nemo sint autem sunt, excepturi cupiditate aut. Sed ratione cumque tempore, sequi pariatur ut provident doloremque quis commodi facere, veritatis eligendi ad iusto omnis atque minima dolorem impedit velit reprehenderit!</p>
     </div>
@@ -19,6 +19,33 @@
         <div class="info">
             <h1>Satyam Shukla</h1>
             <h3>DESIGNER | DEVELOPER | PHOTOGRAPHER  | <br> CINEMATOGRAPHER | EDITOR | CODER</h3>
+        </div>
+    </div>
+
+    <div class="grids">
+        <div class="ca">
+            <div class="cara">
+
+            </div>
+            <div class="carb">
+
+            </div>
+        </div>
+        <div class="cb">
+
+        </div>
+        <div class="cc">
+            <div class="ccra">
+                <div class="ccraca">
+
+                </div>
+                <div class="ccracb">
+                    
+                </div>
+            </div>
+            <div class="ccrb">
+
+            </div>
         </div>
     </div>
 </body>
