--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
     <div class="grids">
         <div class="ca">
             <div class="cara">
-
+                <a href="#"><img src="Assets/Icons/instagram.svg" alt=""></a>
             </div>
             <div class="carb">
-
+                <a href="#"><img src="Assets/Icons/Github.svg" alt=""></a>
             </div>
         </div>
         <div class="cb">
-
+            <a href="#"><img src="Assets/Icons/chrome.svg" alt=""></a>
         </div>
         <div class="cc">
             <div class="ccra">
                 <div class="ccraca">
-
+                    <a href="#"><img src="Assets/Icons/behance.svg" alt=""></a>
                 </div>
                 <div class="ccracb">
-                    
+                    <a href="#"><img src="Assets/Icons/linkedin.svg" alt=""></a>
                 </div>
             </div>
             <div class="ccrb">
-
+                <a href="#"><img src="Assets/Icons/google.svg" alt=""></a>
             </div>
         </div>
     </div>
