--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- <h1>Satyam Shukla</h1>
         <h2>DESIGNER | DEVELOPER | PHOTOGRAPHER  | <br> CINEMATOGRAPHER | EDITOR | CODER</h3> -->
         <h3>Hover here <span class="a">to know about me</span> <span class="b">to close</span></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae numquam dolore at nisi, earum voluptate distinctio facilis repudiandae ab voluptatum nemo sint autem sunt, excepturi cupiditate aut. Sed ratione cumque tempore, sequi pariatur ut provident doloremque quis commodi facere, veritatis eligendi ad iusto omnis atque minima dolorem impedit velit reprehenderit!</p>
+        <p>Passionate Ui/Ux designer and Front-end developer. I get creative ideas and my strength in designing has always been an accurate implementation of the idea that I got, along with flexibility, besides this, I fix my aim to concise and clear arrangement of data. I have performed designing on Figma, Adobe XD, Adobe Illustrator on topics like User interface designing, User experience designing, logo creation &amp; have a nice grip on front-end development with HTML, CSS, JavaScript, Bootstrap.</p>
     </div>
     <div class="basics">
         <img src="Assets/Profile_Photo/image.png" alt="" class="pp">
@@ -25,26 +25,26 @@
     <div class="grids">
         <div class="ca">
             <div class="cara">
-                <a href="#"><img src="Assets/Icons/instagram.svg" alt=""></a>
+                <a href="https://www.instagram.com/sat.zzzz/" target="_blank"><img src="Assets/Icons/instagram.svg" alt=""></a>
             </div>
             <div class="carb">
-                <a href="#"><img src="Assets/Icons/Github.svg" alt=""></a>
+                <a href="https://twitter.com/Sat02yam" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="40" height="40" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="white" d="M8.51 20h-.08a10.87 10.87 0 0 1-4.65-1.09A1.38 1.38 0 0 1 3 17.47a1.41 1.41 0 0 1 1.16-1.18a6.63 6.63 0 0 0 2.54-.89a9.49 9.49 0 0 1-3.51-9.07a1.41 1.41 0 0 1 1-1.15a1.35 1.35 0 0 1 1.43.41a7.09 7.09 0 0 0 4.88 2.75a4.5 4.5 0 0 1 1.41-3.1a4.47 4.47 0 0 1 6.37.19a.7.7 0 0 0 .78.1A1.39 1.39 0 0 1 21 7.13a6.66 6.66 0 0 1-1.28 2.6A10.79 10.79 0 0 1 8.51 20zm0-2h.08a8.79 8.79 0 0 0 9.09-8.59a1.32 1.32 0 0 1 .37-.85a5.19 5.19 0 0 0 .62-1a2.56 2.56 0 0 1-1.91-.85A2.45 2.45 0 0 0 15 6a2.5 2.5 0 0 0-1.79.69a2.53 2.53 0 0 0-.72 2.42l.26 1.14l-1.17.08a8.3 8.3 0 0 1-6.54-2.4a7.12 7.12 0 0 0 3.73 6.46l.95.54l-.63.9a5.62 5.62 0 0 1-2.68 1.92A8.34 8.34 0 0 0 8.5 18zM19 6.65z"/></svg></a>
             </div>
         </div>
         <div class="cb">
-            <a href="#"><img src="Assets/Icons/chrome.svg" alt=""></a>
+            <a href="https://github.com/Sat02yam" target="_blank"><img src="Assets/Icons/Github.svg" alt=""></a>
         </div>
         <div class="cc">
             <div class="ccra">
                 <div class="ccraca">
-                    <a href="#"><img src="Assets/Icons/behance.svg" alt=""></a>
+                    <a href="https://www.behance.net/satyamshukla6" target="_blank"><img src="Assets/Icons/behance.svg" alt=""></a>
                 </div>
                 <div class="ccracb">
-                    <a href="#"><img src="Assets/Icons/linkedin.svg" alt=""></a>
+                    <a href="https://www.linkedin.com/in/sat02yam" target="_blank"><img src="Assets/Icons/linkedin.svg" alt=""></a>
                 </div>
             </div>
             <div class="ccrb">
-                <a href="#"><img src="Assets/Icons/google.svg" alt=""></a>
+                <a href="mailto:sat02yam@gmail.com" target="_blank"><img src="Assets/Icons/google.svg" alt=""></a>
             </div>
         </div>
     </div>
